# trustband

./: .env.example  .gitignore  CONCEPTS.md  LICENSE  README.md  README_EN.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TODO.md  USAGE.md  architecture.md  band-findings.md  benchmark.md  sample-PR.md  submission-checklist.md
docs/plans/: 2026-06-17-001-feat-trustband-capability-roadmap-plan.md
docs/solutions/architecture-patterns/: trustband-verifiable-agent-pipeline.md
fixtures/buggy_app/: ISSUE.md  pricing.py  test_pricing.py
fixtures/no_test/: ISSUE.md  mathlib.py
fixtures/non_actionable/: ISSUE.md  greeter.py  test_greeter.py
fixtures/none_guard/: ISSUE.md  test_textutil.py  textutil.py
fixtures/regression_trap/: ISSUE.md  stats.py  test_stats.py
fixtures/risky_fix/: ISSUE.md  calc.py  test_calc.py
scripts/: band_demo.sh  benchmark.sh  demo.sh  smoke.sh
spike/: band_hello.py
src/trustband/: __init__.py  agents.py  band_bus.py  benchmark.py  bus.py  cli.py  contracts.py  demo.py  git_pr.py  llm.py  orchestrator.py  output.py  patching.py  remote_agent.py  runner.py  scenarios.py  verifier.py
tests/: test_agents.py  test_benchmark.py  test_bus.py  test_contracts.py  test_docs_assets.py  test_e2e_offline.py  test_git_pr.py  test_llm_clients.py  test_llm_fake.py  test_real_band_gated.py  test_remote_agent.py  test_scenarios.py  test_scenarios_e2e.py  test_smoke.py  test_triage_security.py  test_verifier_runner.py  test_verifier_verdict.py
