[project]
name = "trustband"
version = "0.1.0"
description = "A band of agents on Band that turns a bug/issue into a trustworthy fix PR. Don't just write code — earn the merge."
readme = "README_EN.md"
requires-python = ">=3.11"
authors = [{ name = "Charles Cheng", email = "charlescheng@rezona.ai" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
# Only needed for live mode (--llm real / --bus band); the offline path needs neither.
live = [
    "anthropic>=0.40",
    "band-sdk>=0.0.1",
]

[project.scripts]
trustband = "trustband.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustband"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pytest-cov>=5",
    "mypy>=1.11",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires live Band/LLM credentials; skipped unless keys are present",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
